--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,35 +7,12 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/TitleText"
-        android:layout_width="177dp"
-        android:layout_height="95dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginRight="152dp"
-        android:layout_marginBottom="15dp"
-        android:editable="false"
-        android:ems="10"
-        android:fontFamily="serif"
-        android:inputType="none|textPersonName"
-        android:text="BUDGETER"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/WelcomeText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/WelcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
         android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -43,21 +20,20 @@
         app:layout_constraintBottom_toTopOf="@+id/Login_Btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TitleText" />
+        app:layout_constraintTop_toBottomOf="@+id/Budgeter_TItle" />
 
     <Button
         android:id="@+id/Login_Btn"
         android:layout_width="137dp"
         android:layout_height="71dp"
         android:layout_marginStart="137dp"
-        android:layout_marginLeft="137dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="59dp"
         android:layout_marginEnd="137dp"
-        android:layout_marginRight="137dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="36dp"
         android:text="Login"
         app:layout_constraintBottom_toTopOf="@+id/Register_Btn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />
 
@@ -66,25 +42,27 @@
         android:layout_width="137dp"
         android:layout_height="71dp"
         android:layout_marginStart="137dp"
-        android:layout_marginLeft="137dp"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="137dp"
-        android:layout_marginRight="137dp"
-        android:layout_marginBottom="305dp"
+        android:layout_marginBottom="192dp"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Login_Btn" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/Cheat_Btn"
+    <TextView
+        android:id="@+id/Budgeter_TItle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="16dp"
-        android:text="Cheat"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="116dp"
+        android:layout_marginBottom="20dp"
+        android:text="BUDGETER"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/WelcomeText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
